add new website from server na

--- a/xem-phim-bo/ban-trai-di-thue/index.html
+++ b/xem-phim-bo/ban-trai-di-thue/index.html
@@ -1188,7 +1188,7 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
              Lượt xem:
             </dt>
             <dd class="movie-dd">
-             13
+             14
             </dd>
             <br/>
            </dl>
@@ -1658,18 +1658,62 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
        <div class="right-box-content">
         <ul class="list-top-movie" id="list-top-film-week">
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/toc-truong-huyen-thoai" title="Tộc Trưởng Huyền Thoại">
+          <a class="list-top-movie-link" href="/phim-moi/bi-mat-gioi-the-thao-giao-keo-voi-quy" title="Bí mật giới thể thao: Giao kèo với quỷ">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/toc-truong-huyen-thoai-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/bi-mat-gioi-the-thao-giao-keo-voi-quy-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Tộc Trưởng Huyền Thoại
+             Bí mật giới thể thao: Giao kèo với quỷ
             </span>
             <span class="list-top-movie-item-en">
-             Geronimo: An American Legend
+             Untold: Deal With the Devil
+            </span>
+            <span class="list-top-movie-item-view">
+             3 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/khach-san-de-vuong" title="Khách Sạn Đế Vương">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/khach-san-de-vuong-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Khách Sạn Đế Vương
+            </span>
+            <span class="list-top-movie-item-en">
+             The Grand Budapest Hotel
+            </span>
+            <span class="list-top-movie-item-view">
+             2 lượt xem
+            </span>
+            <span class="rate-vote rate-vote-0">
+            </span>
+           </div>
+          </a>
+         </li>
+         <li class="list-top-movie-item" id="list-top-movie-item-1">
+          <a class="list-top-movie-link" href="/phim-moi/hay-noi-cho-toi-dieu-uoc-cua-ban" title="Hãy Nói Cho Tôi Điều Ước Của Bạn">
+           <span class="status">
+            HD Vietsub
+           </span>
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/hay-noi-cho-toi-dieu-uoc-cua-ban-thumb.jpg')">
+           </div>
+           <div class="list-top-movie-item-info">
+            <span class="list-top-movie-item-vn">
+             Hãy Nói Cho Tôi Điều Ước Của Bạn
+            </span>
+            <span class="list-top-movie-item-en">
+             If You Wish Upon Me
             </span>
             <span class="list-top-movie-item-view">
              1 lượt xem
@@ -1680,18 +1724,18 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chuyen-du-hanh-di-gioi-cua-toi" title="Chuyến Du Hành Dị Giới Của Tôi">
+          <a class="list-top-movie-link" href="/phim-moi/ky-nghi-dac-biet-cua-ve-binh-dai-ngan-ha" title="Kỳ Nghỉ Đặc Biệt Của Vệ Binh Dải Ngân Hà">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chuyen-du-hanh-di-gioi-cua-toi-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/ky-nghi-dac-biet-cua-ve-binh-dai-ngan-ha-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chuyến Du Hành Dị Giới Của Tôi
+             Kỳ Nghỉ Đặc Biệt Của Vệ Binh Dải Ngân Hà
             </span>
             <span class="list-top-movie-item-en">
-             My Journey in an Alternate World
+             The Guardians of the Galaxy Holiday Special
             </span>
             <span class="list-top-movie-item-view">
              2 lượt xem
@@ -1702,65 +1746,21 @@ window._wpemojiSettings = {"baseUrl":"https:\/\/s.w.org\/images\/core\/emoji\/15
           </a>
          </li>
          <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/chien-binh-hoa-binh" title="Chiến Binh Hòa Bình">
+          <a class="list-top-movie-link" href="/phim-moi/chao-ninja-phan-1" title="Chào Ninja (Phần 1)">
            <span class="status">
             HD Vietsub
            </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chien-binh-hoa-binh-thumb.jpg')">
+           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/chao-ninja-phan-1-thumb.jpg')">
            </div>
            <div class="list-top-movie-item-info">
             <span class="list-top-movie-item-vn">
-             Chiến Binh Hòa Bình
+             Chào Ninja (Phần 1)
             </span>
             <span class="list-top-movie-item-en">
-             Peaceful Warrior
+             Hello Ninja (Season 1)
             </span>
             <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/nha-ai-quoc-moriarty" title="Nhà ái quốc Moriarty">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/nha-ai-quoc-moriarty-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Nhà ái quốc Moriarty
-            </span>
-            <span class="list-top-movie-item-en">
-             Moriarty the Patriot
-            </span>
-            <span class="list-top-movie-item-view">
-             2 lượt xem
-            </span>
-            <span class="rate-vote rate-vote-0">
-            </span>
-           </div>
-          </a>
-         </li>
-         <li class="list-top-movie-item" id="list-top-movie-item-1">
-          <a class="list-top-movie-link" href="/phim-moi/cuoc-chien-pho-wall" title="Cuộc Chiến Phố Wall">
-           <span class="status">
-            HD Vietsub
-           </span>
-           <div class="list-top-movie-item-thumb" style="background-image: url('https://img.ophim.live/uploads/movies/cuoc-chien-pho-wall-thumb.jpg')">
-           </div>
-           <div class="list-top-movie-item-info">
-            <span class="list-top-movie-item-vn">
-             Cuộc Chiến Phố Wall
-            </span>
-            <span class="list-top-movie-item-en">
-             Margin Call
-            </span>
-            <span class="list-top-movie-item-view">
-             3 lượt xem
+             1 lượt xem
             </span>
             <span class="rate-vote rate-vote-0">
             </span>
